[gd_scene load_steps=12 format=3 uid="uid://byeq2d8xx1uik"]

[ext_resource type="Script" path="res://Xiaowei/CookieEnemy.gd" id="1_w8mk1"]
[ext_resource type="Texture2D" uid="uid://oj7elj3x3ups" path="res://Xiaowei/Cookie enemy.png" id="2_p0mml"]
[ext_resource type="Texture2D" uid="uid://bt5lp60l3mhui" path="res://Xiaowei/Cookie enemy2.png" id="3_f20xe"]
[ext_resource type="AudioStream" uid="uid://bkjdtscxwgvpi" path="res://assets/Sound FX/zapsplat_cartoon_impact_thud_twang_112959.mp3" id="7_fncb6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d2kbs"]
size = Vector2(216.667, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2itra"]
size = Vector2(47, 204.5)

[sub_resource type="SpriteFrames" id="SpriteFrames_kalyu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_p0mml")
}, {
"duration": 1.0,
"texture": ExtResource("3_f20xe")
}],
"loop": true,
"name": &"stay",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3mlsg"]
size = Vector2(53.5, 48)

[sub_resource type="Animation" id="Animation_fnpy2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_g8oxo"]
resource_name = "dead"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.03333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.3, 0.366667, 0.433333, 0.5, 0.566667, 0.633333, 0.7, 0.766667, 0.833333, 0.866667, 0.933333, 1, 1.06667, 1.13333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.5708, 3.14159, 4.71239, 6.28319, -6.28319, -4.71239, -3.14159, -1.5708, 0.0, 1.5708, 3.14159, 4.71239, 6.28319, -6.28319, -4.71239, -3.14159, -1.5708, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b22xc"]
_data = {
"RESET": SubResource("Animation_fnpy2"),
"dead": SubResource("Animation_g8oxo")
}

[node name="Cookie" type="CharacterBody2D"]
script = ExtResource("1_w8mk1")

[node name="DeathDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathDetection"]
position = Vector2(7.15256e-07, -8.5)
scale = Vector2(0.12, 1)
shape = SubResource("RectangleShape2D_d2kbs")

[node name="DropDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropDetection"]
position = Vector2(-51.5, 110)
shape = SubResource("RectangleShape2D_2itra")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.116, 1)
sprite_frames = SubResource("SpriteFrames_kalyu")
animation = &"stay"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_3mlsg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b22xc")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_fncb6")

[connection signal="body_entered" from="DeathDetection" to="." method="_on_body_entered"]
[connection signal="body_entered" from="DropDetection" to="." method="_on_detection_area_body_entered"]
